kube/lsst-lsp-int/oauth2-proxy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - image: lsstdm/oauth2_proxy
        imagePullPolicy: Always
        name: oauth2-proxy
        args:
        - -provider=oidc
        - -oidc-issuer-url=https://cilogon.org
        - -scope=openid email org.cilogon.userinfo
        - -email-domain=*
        - -cookie-domain=lsst-lsp-int.ncsa.illinois.edu
        - -cookie-secure=true
        - -upstream=http://lsst-jwt-authorizer.lsst-pdac.svc.cluster.local:8080/
        - -http-address=0.0.0.0:4180
        - -cookie-refresh=10m
        - -cookie-expire=8h
        - -pass-authorization-header
        - -server-cookies-path=/tmp
        - -skip-jwt-bearer
        - -extra-jwt-issuers=https://lsst-lsp-int.ncsa.illinois.edu=cilogon:/client_id/6ca7b54ac075b65bccb9c885f9ba4a75
        ports:
        - containerPort: 4180
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_buffer_size 64k;
      proxy_buffers 4 64k;
      large_client_header_buffers 4 32k;
      client_header_buffer_size 32k;

spec:
  rules:
  - host: lsst-lsp-int.ncsa.illinois.edu
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /oauth2
  tls:
  - hosts:
    - lsst-lsp-int.ncsa.illinois.edu
    secretName: tls-certificate-lsp-int
